# Telecom-web-app-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
alembic/versions/: 2023032735_added_user_table_953589118f11.py  2023032908_change_id_column_length_162cd2894b44.py  2023032938_create_user_model_b3fc08b3b65a.py
app/: __main__.py  initial_data.py  main.py  models.py
app/api/: deps.py
app/api/endpoints/: auth.py  users.py
app/api/v1/: auth.py  users.py
app/core/: config.py  security.py  session.py
app/schemas/: requests.py  responses.py
app/tests/: conftest.py  test_auth.py  test_users.py
eswar/: pyvenv.cfg
eswar/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
plan-service/: .env.example  .gitignore  pyproject.toml
plan-service/alembic/versions/: 2023033026_create_all_models_815463ba7f54.py
plan-service/app/: initial_data.py  main.py  models.py
plan-service/app/api/: deps.py  routes.py
plan-service/app/api/v1/: plans.py
plan-service/app/core/: config.py
plan-service/app/schemas/: requests.py  responses.py
user-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml
user-service/alembic/versions/: 2023033026_create_all_models_58abc215b1b8.py  2023033111_they_didnt_change_active_765ca0a02a73.py
user-service/app/: __main__.py  initial_data.py  models.py
user-service/app/api/: deps.py  routes.py
user-service/app/core/: config.py  security.py
user-service/app/schemas/: requests.py  responses.py
user-service/app/tests/: conftest.py  test_users.py
(+2 files in other folders)
